[gd_scene load_steps=22 format=2]

[ext_resource path="res://BottomHand.gd" type="Script" id=1]
[ext_resource path="res://Table.gd" type="Script" id=2]
[ext_resource path="res://OppositeHand.gd" type="Script" id=3]
[ext_resource path="res://LeftHand.gd" type="Script" id=4]
[ext_resource path="res://RightHand.gd" type="Script" id=5]
[ext_resource path="res://Asset/TableBackground.png" type="Texture" id=6]
[ext_resource path="res://Asset/Timer/TimerLeft.png" type="Texture" id=7]
[ext_resource path="res://Asset/Timer/TimerBackground.png" type="Texture" id=8]
[ext_resource path="res://Asset/Timer/TimerOpposite.png" type="Texture" id=9]
[ext_resource path="res://Asset/Timer/TimerBottom.png" type="Texture" id=10]
[ext_resource path="res://Asset/Timer/TimerRight.png" type="Texture" id=11]
[ext_resource path="res://Timer.gd" type="Script" id=12]
[ext_resource path="res://BottomDropArea.gd" type="Script" id=13]
[ext_resource path="res://OppositeDropArea.gd" type="Script" id=14]
[ext_resource path="res://RightDropArea.gd" type="Script" id=15]
[ext_resource path="res://LeftDropArea.gd" type="Script" id=16]
[ext_resource path="res://Asset/Button/PlayerAction/ActionChow.png" type="Texture" id=17]
[ext_resource path="res://Asset/Button/PlayerAction/ActionPong.png" type="Texture" id=18]
[ext_resource path="res://Asset/Button/PlayerAction/ActionKong.png" type="Texture" id=19]
[ext_resource path="res://Asset/Button/PlayerAction/ActionWin.png" type="Texture" id=20]
[ext_resource path="res://Asset/Button/PlayerAction/ActionPass.png" type="Texture" id=21]

[node name="Table" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="TextureRect" parent="."]
margin_right = 132.0
margin_bottom = 131.0
texture = ExtResource( 8 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLeft" type="TextureRect" parent="Timer"]
visible = false
margin_left = -164.0
margin_top = -174.0
margin_right = 40.0
margin_bottom = 251.0
texture = ExtResource( 7 )

[node name="TimerRight" type="TextureRect" parent="Timer"]
visible = false
margin_left = 94.0
margin_top = -173.0
margin_right = 298.0
margin_bottom = 252.0
texture = ExtResource( 11 )

[node name="TimerOpposite" type="TextureRect" parent="Timer"]
visible = false
margin_left = -119.0
margin_top = -166.0
margin_right = 303.0
margin_bottom = 35.0
texture = ExtResource( 9 )

[node name="TimerBottom" type="TextureRect" parent="Timer"]
margin_left = -122.0
margin_top = 92.0
margin_right = 304.0
margin_bottom = 295.0
texture = ExtResource( 10 )

[node name="BottomHand" type="HBoxContainer" parent="."]
margin_left = 155.239
margin_top = 303.084
margin_right = 195.239
margin_bottom = 343.084
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OppositeHand" type="Node2D" parent="."]
position = Vector2( 896.551, 142.818 )
script = ExtResource( 3 )

[node name="LeftHand" type="Node2D" parent="."]
position = Vector2( 265.815, 355.45 )
script = ExtResource( 4 )

[node name="RightHand" type="Node2D" parent="."]
position = Vector2( 1647.43, 380.177 )
script = ExtResource( 5 )

[node name="TestButtons" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TestButtons"]
margin_right = 64.0
margin_bottom = 40.0
text = "Add Tile"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="TestButtons"]
margin_left = 74.0
margin_right = 189.0
margin_bottom = 40.0
text = "Add to Oppotite"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="TestButtons"]
margin_left = 199.0
margin_right = 281.0
margin_bottom = 40.0
text = "Add to Left"

[node name="One" type="Button" parent="TestButtons"]
margin_left = 291.0
margin_right = 346.0
margin_bottom = 40.0
text = "  One  "

[node name="Two" type="Button" parent="TestButtons"]
margin_left = 356.0
margin_right = 409.0
margin_bottom = 40.0
text = "  Two  "

[node name="Three" type="Button" parent="TestButtons"]
margin_left = 419.0
margin_right = 483.0
margin_bottom = 40.0
text = "  Three  "

[node name="Four" type="Button" parent="TestButtons"]
margin_left = 493.0
margin_right = 549.0
margin_bottom = 40.0
text = "  Four  "

[node name="ConnectButton" type="Button" parent="TestButtons"]
margin_left = 559.0
margin_right = 623.0
margin_bottom = 40.0
text = "Connect"

[node name="StartButton" type="Button" parent="TestButtons"]
margin_left = 633.0
margin_right = 674.0
margin_bottom = 40.0
text = "Start"

[node name="BottomDropArea" type="Node2D" parent="."]
position = Vector2( 621.315, 779.207 )
script = ExtResource( 13 )

[node name="OppositeDropArea" type="Node2D" parent="."]
position = Vector2( 1222.13, 256.318 )
script = ExtResource( 14 )

[node name="LeftDropArea" type="Node2D" parent="."]
position = Vector2( 383.452, 332.188 )
script = ExtResource( 16 )

[node name="RightDropArea" type="Node2D" parent="."]
position = Vector2( 1570.72, 658.225 )
script = ExtResource( 15 )

[node name="PlayerAction" type="HBoxContainer" parent="."]
margin_left = 1236.44
margin_top = 714.806
margin_right = 1695.44
margin_bottom = 798.806
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chow" type="TextureButton" parent="PlayerAction"]
margin_right = 84.0
margin_bottom = 84.0
texture_normal = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pong" type="TextureButton" parent="PlayerAction"]
margin_left = 94.0
margin_right = 180.0
margin_bottom = 84.0
texture_normal = ExtResource( 18 )

[node name="Kong" type="TextureButton" parent="PlayerAction"]
margin_left = 190.0
margin_right = 275.0
margin_bottom = 84.0
texture_normal = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="TextureButton" parent="PlayerAction"]
margin_left = 285.0
margin_right = 367.0
margin_bottom = 84.0
texture_normal = ExtResource( 20 )

[node name="Pass" type="TextureButton" parent="PlayerAction"]
margin_left = 377.0
margin_right = 459.0
margin_bottom = 84.0
texture_normal = ExtResource( 21 )
[connection signal="pressed" from="TestButtons/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TestButtons/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="TestButtons/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="TestButtons/One" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="TestButtons/Two" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="TestButtons/Three" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="TestButtons/Four" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="TestButtons/ConnectButton" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="TestButtons/StartButton" to="." method="_on_Button9_pressed"]
